Ocr, HealthReport 유닛 테스트 추가